Update linters. (#12386)
* Update linters.

* Update code and enable reasonable rules.