@@ -3,7 +3,7 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.pinterest:ktlint:${versions.ktlint}"
+    ktlint("com.pinterest.ktlint:ktlint-cli:${versions.ktlint}")
 }
 
 task ktlint(type: JavaExec, group: "verification") {
@@ -18,5 +18,4 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     mainClass = "com.pinterest.ktlint.Main"
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
